# AIChatAssist

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
boyler_plate/: README.md
conversation_assistant_service/: README.md
microservices/: README.md
microservices/context_retrieval/: README.md
microservices/sample_microservice/: Dockerfile  README.md  pyproject.toml  run_tests.sh
microservices/sample_microservice/tests/: test_main.py
microservices/shared/: README.md
slackbot_integration/: README.md
tests/: test_structure.py
