[tool.poetry]
name = "sample_microservice"
version = "0.1.0"
description = "Sample microservice for AI Chat Assistant"
authors = ["Roland Abou Younes <roland@abouyounes.com>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
fastapi = "^0.114.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
